rework buildsrc