@@ -1,14 +1,19 @@
+import com.ryderbelserion.feather.enums.Repository
+
 plugins {
+    id("com.ryderbelserion.feather-core")
+
     `maven-publish`
+
     `java-library`
 }
 
 repositories {
     maven("https://repo.codemc.io/repository/maven-public")
 
-    maven("https://repo.crazycrew.us/releases")
+    maven(Repository.CrazyCrewReleases.url)
 
-    maven("https://jitpack.io")
+    maven(Repository.Jitpack.url)
 
     mavenCentral()
 }
@@ -23,10 +28,14 @@ java {
     withSourcesJar()
 }
 
+val javaComponent: SoftwareComponent = components["java"]
+
 tasks {
     compileJava {
         options.encoding = Charsets.UTF_8.name()
         options.release.set(21)
+
+        options.compilerArgs.add("--enable-preview")
     }
 
     javadoc {
@@ -46,6 +55,16 @@ tasks {
                     this.username = System.getenv("gradle_username")
                     this.password = System.getenv("gradle_password")
                 }
+            }
+        }
+
+        publications {
+            create<MavenPublication>("maven") {
+                from(javaComponent)
+
+                group = rootProject.group
+                artifactId = project.name.lowercase()
+                version = "${rootProject.version}"
             }
         }
     }
